Add container_name environment variable

--- a/.env.example
+++ b/.env.example
@@ -62,5 +62,4 @@ USERS_REFRESH_DELAY="*/30 * * * *"
 
 # Docker settings
 DATABASE_NETWORK=database_network
-RED_OUT_PORT=8182
-PROD_OUT_PORT=8183
+CONTAINER_NAME=leetcode_bot
