--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
 # External Microservices
-VIZAPI_LINK=https://vizapi.example.com
+VIZAPI_LINK=https://vizapi.adigame.dev
 
 # Cumulative Rating Settings
 CML_EASY_POINTS=0.5
