Rename default SQLITE_FILENAME=leetbot.sqlite

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ PORT=8182
 DB_PROVIDER=sqlite3
 
 # SQLite3 SETTINGS
-SQLITE3_FILENAME=leetbot.db
+SQLITE3_FILENAME=leetbot.sqlite
 
 # MONGODB SETTINGS
 MONGO_DB_URL=localhost
