--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prom-client": "^14.0.1",
     "restana": "^4.9.2",
     "rimraf": "^3.0.2",
+    "sequelize": "^6.17.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^4.2.0",
     "typescript": "^4.4.3"
