--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Get token from https://t.me/botfather
 TELEGRAM_TOKEN=
+TELEGRAM_BOT_NAME=
 
 # Get values from https://discord.com/developers/applications
 DISCORD_TOKEN=
