Fix comment in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Get token from https://t.me/botfather
+# Get token and bot name from https://t.me/botfather
 TELEGRAM_TOKEN=
 TELEGRAM_BOT_NAME=
 
