--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.5.1",
+    "jsdoc": "^3.6.10",
     "mongodb-memory-server": "^8.1.0",
     "telegram-test": "^0.1.8",
     "ts-jest": "^27.0.5"
