--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
 # External Microservices
-VIZAPI_LINK=https://vizapi.adigame.dev
+VIZAPI_LINK=https://vizapi.madrigal.pro
 
 # Cumulative Rating Settings
 CML_EASY_POINTS=0.5
