Add rule for letting camelcase

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "no-lonely-if": 0,
         "no-underscore-dangle": 0,
         "max-classes-per-file": 0,
+        "camelcase": 0,
         "import/order": [
             "error",
             {
