Add https:// to LBB_URL

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
 
 # LeetCode BOT Backend
-LBB_URL=lbb.madrigal.pro
+LBB_URL=https://lbb.madrigal.pro
 LBB_USERNAME=admin
 LBB_PASSWORD=password
 
