--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "sourceMap": true,
         "types": ["node", "jest"],
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "skipLibCheck": true
     },
     "include": ["./src/**/*"],
     "exclude": ["./src/__tests__"]
