--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,66 @@
 stages:
   - build
   - test
-  - deploy
 
-build-job:
+install-node-dependencies:
+  image: node:16.11.0
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - npm ci
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
+  artifacts:
+    expire_in: 1 days
+    when: on_success
+    paths:
+      - node_modules/
 
-unit-test-job:
+test:
+  image: node:16.11.0
   stage: test
+  needs: ['install-node-dependencies']
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+   - npm run test:ci
 
-lint-test-job:
+test-coverage:
+  image: node:16.11.0
   stage: test
+  needs: ['install-node-dependencies']
   script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
+   - npm run test:ci:coverage
 
-deploy-job:
-  stage: deploy
+lint:
+  image: node:16.11.0
+  stage: test
+  needs: ['install-node-dependencies']
   script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+   - npm run lint
+
+build-docker:
+  services:
+  - name: docker:dind
+    alias: dind
+  image: docker:20.10.12
+  stage: build
+  script:
+    - docker build -f ./deployment/Dockerfile -t leetcode_bot .
+    - mkdir image
+    - docker save leetcode_bot > image/leetcode_bot.tar
+  artifacts:
+    paths:
+      - image
+
+test-inside-docker:
+  services:
+  - name: docker:dind
+    alias: dind
+  image: docker:20.10.12
+  stage: test
+  needs: ['build-docker']
+  script:
+    - docker load -i image/leetcode_bot.tar
+    - docker image ls
+    - docker build -f ./deployment/Dockerfile.test -t leetcode_bot_test .
+    - docker run leetcode_bot_test
