Add correct collector for coverage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,11 @@ test:
   needs: ['install-node-dependencies']
   script:
    - npm run test:ci
+  artifacts:
+    when: always
+    reports:
+      junit:
+        - junit.xml
 
 lint:
   image: node:16.11.0
