--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,8 +19,6 @@ jobs:
       matrix:
         node-version: [ v16.11.0 ]
 
-    environment: testing_environment
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -30,4 +28,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run test:ci
+    - name: Test Coverage
+      env:
+        LBB_URL: ${{ secrets.LBB_URL }}
+        LBB_USERNAME: ${{ secrets.LBB_USERNAME }}
+        LBB_PASSWORD: ${{ secrets.LBB_PASSWORD }}
+      run: npm run test:ci
