Add environment variables for Docker

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,17 +10,18 @@ jobs:
   docker:
     name: Test
 
-    env:
-      LBB_URL: ${{ secrets.LBB_URL }}
-      LBB_USERNAME: ${{ secrets.LBB_USERNAME }}
-      LBB_PASSWORD: ${{ secrets.LBB_PASSWORD }}
-
     timeout-minutes: 10
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+
+    - name: Create custom env file
+      run: |
+        echo "LBB_URL=${{ secrets.LBB_URL }}" > env.custom
+        echo "LBB_USERNAME=${{ secrets.LBB_USERNAME }}" >> env.custom
+        echo "LBB_PASSWORD=${{ secrets.LBB_PASSWORD }}" >> env.custom
 
     - name: Build original image
       run: docker build -t leetcode_bot --file deployment/Dockerfile .
@@ -29,4 +30,4 @@ jobs:
       run: docker build -t leetcode_bot_test --file deployment/Dockerfile.test .
 
     - name: Run tests
-      run: docker run --rm leetcode_bot_test
+      run: docker run --rm leetcode_bot_test --env-file env.custom
