--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
 
 # LeetCode BOT Backend
-LBB_URL=https://lbb.madrigal.pro
+LBB_URL=https://lbb.example.com
 LBB_USERNAME=admin
 LBB_PASSWORD=password
 
@@ -21,7 +21,7 @@ LBB_PASSWORD=password
 PORT=8182
 
 # External Microservices
-VIZAPI_LINK=https://vizapi.madrigal.pro
+VIZAPI_LINK=https://vizapi.example.com
 
 # Cumulative Rating Settings
 CML_EASY_POINTS=0.5
