--- a/package.json
+++ b/package.json
@@ -16,24 +16,19 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
     "@slack/bolt": "^3.7.0",
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
-    "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.8",
     "node-schedule": "^2.0.0",
     "node-telegram-bot-api": "^0.54.0",
-    "pg": "^8.7.1",
     "prom-client": "^14.0.1",
     "restana": "^4.9.2",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.19.2",
-    "sqlite3": "4.2.0",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
@@ -44,14 +39,13 @@
     "@types/node-telegram-bot-api": "^0.56.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "discord-api-types": "^0.33.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.5.1",
     "jest-junit": "^13.2.0",
     "jsdoc": "^3.6.10",
-    "mongodb-memory-server": "^8.1.0",
-    "telegram-test": "^0.1.8",
     "ts-jest": "^27.0.5"
   }
 }
