--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@jest/globals": "^27.2.4",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
+    "@types/node-schedule": "^2.1.0",
     "@types/node-telegram-bot-api": "^0.56.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
