Fix small issues with docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 
 services:
   leetcode_bot:
@@ -19,5 +19,5 @@ services:
 
 networks:
   database_network:
-    external:
-      name: ${DATABASE_NETWORK}
+    name: ${DATABASE_NETWORK}
+    external: true
