--- a/package.json
+++ b/package.json
@@ -15,42 +15,42 @@
   "author": "Adi Sabyrbayev",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "@slack/bolt": "^3.7.0",
-    "axios": "^0.21.4",
-    "dayjs": "^1.10.7",
-    "discord-api-types": "^0.23.1",
-    "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0",
+    "@discordjs/builders": "^1.3.0",
+    "@discordjs/rest": "^1.3.0",
+    "@slack/bolt": "^3.12.1",
+    "axios": "^1.1.3",
+    "dayjs": "^1.11.5",
+    "discord-api-types": "^0.37.14",
+    "discord.js": "^14.6.0",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.8",
-    "node-schedule": "^2.0.0",
-    "node-telegram-bot-api": "^0.54.0",
-    "pg": "^8.7.1",
-    "prom-client": "^14.0.1",
-    "restana": "^4.9.2",
+    "mongoose": "^6.6.5",
+    "node-schedule": "^2.1.0",
+    "node-telegram-bot-api": "^0.59.0",
+    "pg": "^8.8.0",
+    "prom-client": "^14.1.0",
+    "restana": "^4.9.6",
     "rimraf": "^3.0.2",
-    "sequelize": "^6.17.0",
-    "sqlite3": "4.2.0",
-    "typescript": "^4.4.3"
+    "sequelize": "^6.25.3",
+    "sqlite3": "5.1.2",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@jest/globals": "^27.2.4",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
-    "@types/node": "^16.10.2",
-    "@types/node-telegram-bot-api": "^0.56.0",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.5.1",
-    "jest-junit": "^13.2.0",
-    "jsdoc": "^3.6.10",
-    "mongodb-memory-server": "^8.1.0",
+    "@jest/globals": "^29.2.1",
+    "@types/jest": "^29.2.0",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.11.2",
+    "@types/node-telegram-bot-api": "^0.57.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.2.1",
+    "jest-junit": "^14.0.1",
+    "jsdoc": "^3.6.11",
+    "mongodb-memory-server": "^8.9.3",
     "telegram-test": "^0.1.8",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^29.0.3"
   }
 }
