Add Leetcode BOT Backend envs to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ SLACK_TOKEN=
 SLACK_SIGNING_SECRET=
 SLACK_APP_TOKEN=
 
+# LeetCode BOT Backend
+LBB_URL=https://lbb.example.com
+LBB_USERNAME=admin
+LBB_PASSWORD=password
+
 # REST
 PORT=8182
 
