Update node-js CI/CD job

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,31 +7,6 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    name: Test
-
-    runs-on: ubuntu-latest
-
-    env:
-      CI: true
-
-    strategy:
-      matrix:
-        node-version: [ v16.11.0 ]
-
-    environment: testing_environment
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-
   test_coverage:
     name: Test Coverage
 
@@ -44,7 +19,34 @@ jobs:
       matrix:
         node-version: [ v16.11.0 ]
 
-    environment: testing_environment
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - name: Install NPM Packages
+      run: npm ci
+    - name: Test Coverage
+      env:
+        LBB_URL: ${{ secrets.LBB_URL }}
+        LBB_USERNAME: ${{ secrets.LBB_USERNAME }}
+        LBB_PASSWORD: ${{ secrets.LBB_PASSWORD }}
+        VIZAPI_LINK: ${{ secrets.VIZAPI_LINK }}
+      run: npm run test:ci
+
+  lint:
+    name: Lint
+
+    runs-on: ubuntu-latest
+
+    env:
+      CI: true
+
+    strategy:
+      matrix:
+        node-version: [ v16.11.0 ]
 
     steps:
     - uses: actions/checkout@v2
@@ -53,6 +55,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test:coverage
+    - name: Install NPM Packages
+      run: npm ci
+    - name: Lint
+      run: npm run lint
