--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,7 @@ POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_PORT=5432
 
 # External Microservices
-VIZAPI_LINK=https://vizapi.madrigal.pro
+VIZAPI_LINK=https://vizapi.example.com
 
 # Cumulative Rating Settings
 CML_EASY_POINTS=0.5
