--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "no-underscore-dangle": 0,
         "max-classes-per-file": 0,
         "camelcase": 0,
+        "no-shadow": "off",
         "import/order": [
             "error",
             {
@@ -71,7 +72,7 @@
                 }
             }
         ],
-        "no-shadow": "off",
+        "@typescript-eslint/no-non-null-assertion": 0,
         "@typescript-eslint/no-shadow": ["error"]
     },
     "settings": {
