--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "@discordjs/builders": "^1.3.0",
     "@discordjs/rest": "^1.3.0",
     "@slack/bolt": "^3.12.1",
-    "axios": "^0.21.4",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.5",
     "discord-api-types": "^0.37.14",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "node-schedule": "^2.1.0",
-    "node-telegram-bot-api": "^0.59.0",
+    "node-telegram-bot-api": "^0.65.1",
     "prom-client": "^14.1.0",
     "restana": "^4.9.6",
     "rimraf": "^3.0.2",
     "sequelize": "^6.25.3",
-    "sqlite3": "5.1.2",
+    "sqlite3": "^5.1.7",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
