--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
         "sourceMap": true,
         "types": ["node", "jest"],
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "skipLibCheck": true
+        "experimentalDecorators": true
     },
     "include": ["./src/**/*"],
     "exclude": ["./src/__tests__"]
