--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,20 @@ CML_EASY_POINTS=0.5
 CML_MEDIUM_POINTS=1.5
 CML_HARD_POINTS=5
 
+# System settings
+LEETCODE_URL=https://leetcode.com
+USER_REQUEST_DELAY_MS=4000
+#   *    *    *    *    *    *
+#   ┬    ┬    ┬    ┬    ┬    ┬
+#   │    │    │    │    │    │
+#   │    │    │    │    │    └ day of week (0 - 7) (0 or 7 is Sun)
+#   │    │    │    │    └───── month (1 - 12)
+#   │    │    │    └────────── day of month (1 - 31)
+#   │    │    └─────────────── hour (0 - 23)
+#   │    └──────────────────── minute (0 - 59)
+#   └───────────────────────── second (0 - 59, OPTIONAL)
+USERS_REFRESH_DELAY="*/30 * * * *"
+
 # Docker settings
 DATABASE_NETWORK=database_network
 CONTAINER_NAME=leetcode_bot
